<resources>
    <string name="app_name">ChallangeNDP</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_accoutnt">Already have an account ?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_signup">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="Next">Next</string>
    <string name="living_healthy">Start living healthy from now</string>
    <string name="Nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="kegiatan_sehari_hari">Kegiatan sehari-hari</string>
    <string name="penyakit">Penyakit</string>
    <string name="Submit">Submit</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="More">More</string>
    <string name="home"></string>
    <string name="explore"></string>
    <string name="profile"></string>
    <string name="select_the_information_you_want">select the information you want</string>
    <string name="better_me">Better Me</string>
</resources>