<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".betterMe.DiagnosisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="251dp"
            android:src="@drawable/users_diagnosis"
            android:layout_gravity="top"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living_healthy"
            android:textAlignment="center"
            android:paddingTop="18dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comicceue_bold"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/form"
            android:hint="@string/Nama"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="18dp"
            android:textColorHint="@color/black"
            android:fontFamily="@font/comicceue_bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/form"
            android:hint="@string/umur"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="18dp"
            android:textColorHint="@color/black"
            android:fontFamily="@font/comicceue_bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/form"
            android:hint="@string/kegiatan_sehari_hari"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="18dp"
            android:textColorHint="@color/black"
            android:fontFamily="@font/comicceue_bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/form"
            android:hint="@string/penyakit"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="18dp"
            android:textColorHint="@color/black"
            android:fontFamily="@font/comicceue_bold"
            />

        <Button
            android:id="@+id/recomendation_page"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green_button_primary"
            android:textColor="@color/black"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/comicceue_bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:inputType="textCapSentences"
            />
    </LinearLayout>
</ScrollView>