<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".betterMe.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="167dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@drawable/splash_screen_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/comicceue_bold"
                android:text="Username"
                android:textSize="20sp"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/form"
                android:fontFamily="@font/comicceue_bold"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/black"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/comicceue_bold"
                android:text="Password"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/form"
                android:fontFamily="@font/comicceue_bold"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/black"
                android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/login_user"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_primary"
                android:backgroundTint="@color/green_button_primary"
                android:fontFamily="@font/comicceue_bold"
                android:inputType="textCapSentences"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/comicceue_bold"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/register_user"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/comicceue_bold"
                    android:inputType="textCapSentences"
                    android:text="@string/register"
                    android:textColor="@color/green_button_primary"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

</ScrollView>
