<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_marginTop="20dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/resume" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="#FF024377"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="16dp"
            />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="textPassword"
            android:hint="Email"
            android:textSize="10sp"
            android:textColor="@color/grey"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="8dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="Password"
                android:textSize="10sp"
                android:textColor="@color/grey"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                />

            <ImageButton
                android:id="@+id/show_hide_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

            <TextView
                android:id="@+id/show_hide_counter_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="show"
                android:visibility="gone" />

        </FrameLayout>

        <Button
            android:id="@+id/login_user"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="35dp"
            android:text="@string/login"
            android:inputType="textCapSentences"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="3dp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/button_normal"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginLeft="16dp"
                />

            <Button
                android:id="@+id/goto_register"
                android:background="@android:color/transparent"
                android:layout_width="50dp"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:textColor="#3279FF"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>