<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/goto_login"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
            android:paddingLeft="13dp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/coder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="#024377"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Username"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Phone Number"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <ImageButton
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

            <TextView
                android:id="@+id/show_hide_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="show"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <ImageButton
                android:id="@+id/show_hide_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

            <TextView
                android:id="@+id/show_hide_counter_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="show"
                android:visibility="gone"
                />
        </FrameLayout>

        <Button
            android:id="@+id/register_user"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/button_normal"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textCapSentences"
            android:paddingTop="3dp"
            android:text="@string/continue_signup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/already_have_an_accoutnt"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="#3279FF"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>